# AI-Infra-as-code

./: .gitignore  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ai-optimizer.yml  pulumi.yml  terraform.yml
ai-optimizer/: README.md  pyproject.toml  requirements.txt
ai-optimizer/aiopt/: __init__.py  capacity_model.py  catalog.py  cli.py  cost_model.py  emit.py  genetic.py  optimizer.py  recommender.py  spec.py
ai-optimizer/data/: history.json
ai-optimizer/examples/: workload-dev.yaml  workload-prod.yaml
ai-optimizer/tests/: test_emit.py  test_optimizer.py
docs/: 01-architecture.md  02-getting-started.md  03-terraform-guide.md  04-pulumi-guide.md  05-ai-optimizer.md  06-end-to-end-walkthrough.md
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
pulumi/components/: __init__.py  config.py  database.py  kubernetes.py  load_balancer.py  vpc.py
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: backend.tf  main.tf  terraform.tfvars
terraform/environments/prod/: backend.tf  main.tf  terraform.tfvars
terraform/environments/staging/: backend.tf  main.tf  terraform.tfvars
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/kubernetes/: main.tf  outputs.tf  variables.tf
terraform/modules/load-balancer/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
